# CMakeDemo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo.cpp  demo_shared.cpp  demo_shared_static.cpp  demo_static.cpp
include/: CMakeLists.txt  add.h  mul.h  test.h
source/: CMakeLists.txt  test.cpp  version.aps  version.h  version.rc
source/add/: CMakeLists.txt  add.cpp
source/mul/: CMakeLists.txt  mul.cpp
source/version/: CMakeLists.txt  resource.h  version.h  version.h.in  version.rc  version.rc.in
